@@ -14,16 +14,16 @@ Layout
 external libraries.
     o ports - Makefiles for each port describing what to build for the
 port.
-    o local - Makefiles that are machine and/or user specific.  Used
+    o local - Makefiles that are machine and/or user specific. Used
 to override the defaults.
 
  * Build time directories
-    o orig - Original copies of the source code as fetched from cvs or
+    o orig - Original copies of the source code as fetched from svn or
 local copies.
     o src - Build time copies of the source code.
     o build - Output directory.
 
-Assumes a Debian GNU/Linux like system, having at least cvs and GNU
+Assumes a Debian GNU/Linux like system, having at least svn and GNU
 make.  maccer requires doc++ (http://docpp.sourceforge.net/).
 
 More to come.
