@@ -11,7 +11,7 @@ _ARCHIVE_NAME              = $(_ARCHIVE_BASENAME)-$(BUILDDATE).tar.gz
 %-src-archive: %.fetched $(SRCDIR) $(STAMPDIR)
 	mkdir -p $(_ARCHIVE_DIR)
 	cd $(ORIGDIR); \
-	  tar -czf $(_ARCHIVE_DIR)/$(_ARCHIVE_NAME) --exclude=CVS $(_ARCHIVE_SRC_TREE_BASENAME)
+	  tar -czf $(_ARCHIVE_DIR)/$(_ARCHIVE_NAME) --exclude=CVS --exclude=.svn $(_ARCHIVE_SRC_TREE_BASENAME)
 	touch $@
 
 .PHONY: archive-src-trees
