@@ -1,3 +1,10 @@
+2006-04-20 Borut Razem <borut.razem AT siol.net>
+
+	* sdcc-build-bootstrap.sh, README,
+	  components/sdcc-extra.mk, components/sdcc.mk,
+	  lib/bootstrap.mk, lib/fetch.mk, lib/src-archive.mk, lib/variables.mk:
+	  nightly build migration from CVS to Subversion
+
 2006-01-28 Borut Razem <borut.razem AT siol.net>
 
 	* local/x86-linux1.mk, local/x86-linux1-i586-mingw32msvc.mk: added
